--- a/akeneo-design-system/package.json
+++ b/akeneo-design-system/package.json
@@ -22,9 +22,6 @@
   "author": "akeneo",
   "license": "OSL-3.0",
   "dependencies": {
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "styled-components": "^5.1.1"
   },
   "devDependencies": {
     "@storybook/addon-a11y": "^6.1.11",
@@ -67,5 +64,9 @@
     "tsconfig-paths-webpack-plugin": "^3.3.0",
     "typescript": "^4.1.3",
     "yargs": "^16.0.3"
-  }
+  },
+  "peerDependencies": {
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "styled-components": "^5.1.1"}
 }
