CPM-133: add role column in export

--- a/src/Akeneo/UserManagement/Bundle/Resources/config/writers.yml
+++ b/src/Akeneo/UserManagement/Bundle/Resources/config/writers.yml
@@ -18,11 +18,23 @@ services:
         arguments:
             - '@pim_connector.array_converter.standard_to_flat.user_role'
             - '@pim_connector.factory.flat_item_buffer'
-            - '@pim_connector.writer.file.flat_item_buffer_flusher'
+            - '@pim_user.writer.file.user_role.flat_item_buffer_flusher'
 
     pim_connector.writer.file.xlsx_user_role:
         class: '%pim_connector.writer.file.xlsx.class%'
         arguments:
             - '@pim_connector.array_converter.standard_to_flat.user_role'
             - '@pim_connector.factory.flat_item_buffer'
-            - '@pim_connector.writer.file.flat_item_buffer_flusher'
+            - '@pim_user.writer.file.user_role.flat_item_buffer_flusher'
+
+    pim_user.writer.file.user_role.flat_item_buffer_flusher:
+        class: '%pim_connector.writer.file.flat_item_buffer_flusher.class%'
+        arguments:
+            - '@pim_connector.writer.file.default.column_presenter'
+            - '@pim_user.writer.file.user_role.column_sorter'
+
+    pim_user.writer.file.user_role.column_sorter:
+        class: '%pim_connector.writer.file.default.column_sorter.class%'
+        arguments:
+            - '@pim_connector.array_converter.field_splitter'
+            - [ 'role', 'label' ]
