CPM-143: add default to the description column

--- a/src/Akeneo/Pim/Structure/Bundle/Resources/config/model/doctrine/Attribute.orm.yml
+++ b/src/Akeneo/Pim/Structure/Bundle/Resources/config/model/doctrine/Attribute.orm.yml
@@ -134,6 +134,8 @@ Akeneo\Pim\Structure\Component\Model\Attribute:
         description:
             type: string
             length: 500
+            options:
+                default: ""
     oneToMany:
         options:
             targetEntity: Akeneo\Pim\Structure\Component\Model\AttributeOptionInterface
