--- a/src/Akeneo/Platform/Bundle/AnalyticsBundle/Resources/config/requirejs.yml
+++ b/src/Akeneo/Platform/Bundle/AnalyticsBundle/Resources/config/requirejs.yml
@@ -1,4 +1,12 @@
 config:
+    config:
+        pim/controller-registry:
+            controllers:
+                akeneo_analytics_system_info_index:
+                    module: pim-analytics-system-info-controller
     paths:
         pim/data-collector: pimanalytics/js/data-collector
         pim/patch-fetcher:  pimanalytics/js/patch-fetcher
+        pim-analytics-system-info-controller: pimanalytics/js/controller/system-info-controller.ts
+        pim-analytics-system-info-index: pimanalytics/js/system-info-index.tsx
+
