--- a/src/Akeneo/Platform/Bundle/AnalyticsBundle/Resources/config/routing.yml
+++ b/src/Akeneo/Platform/Bundle/AnalyticsBundle/Resources/config/routing.yml
@@ -4,7 +4,7 @@ pim_analytics_data_collect:
 
 pim_analytics_system_info_index:
     path: /system_info
-    defaults: { _controller: 'pim_analytics.controller.system_info:indexAction', _format: html }
+    defaults: { _controller: 'pim_analytics.controller.system_info:indexAction', _format: json }
 
 pim_analytics_system_info_download:
     path: /system_info/download
