--- a/src/Akeneo/Pim/Structure/Bundle/Resources/config/model/doctrine/Attribute.orm.yml
+++ b/src/Akeneo/Pim/Structure/Bundle/Resources/config/model/doctrine/Attribute.orm.yml
@@ -131,11 +131,9 @@ Akeneo\Pim\Structure\Component\Model\Attribute:
             type: datetime
         updated:
             type: datetime
-        description:
-            type: string
-            length: 500
-            options:
-                default: ""
+        descriptions:
+            type: json
+            columnDefinition: JSON NOT NULL DEFAULT (JSON_OBJECT())
     oneToMany:
         options:
             targetEntity: Akeneo\Pim\Structure\Component\Model\AttributeOptionInterface
