--- a/composer.json
+++ b/composer.json
@@ -125,6 +125,7 @@
         "symfony/yaml": "4.4.18",
         "twig/twig": "1.44.1",
         "webmozart/assert": "1.9.1",
+        "aws/aws-sdk-php": "3.172",
         "aws/aws-sdk-php": "3.172"
     },
     "require-dev": {
